# EasyBO

./: .coveragerc  .flake8  .pre-commit-config.yaml  00_intro.ipynb  01_Exact_GP_Regression_on_Classification_Labels.ipynb  AUTHORS.md  AUTHORS.rst  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  debugging.ipynb  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
_easybo/: __init__.py  gp.py  logger.py
_easybo/botorch_local/: README.rst
_easybo/botorch_local/optim/: initializers.py
docs/source/: conf.py  easybo.rst  index.rst  installation.rst  modules.rst  quickstart.rst  tutorials.rst
docs/source/tutorials/: second_simple_gp.rst  simple_gp.rst
easyBO/: __init__.py  bo.py  gp.py  logger.py  utils.py
easyBO/misc/: test_functions.py
easybayes/: my_module.py
easybo/: bo.py  gp.py  logger.py  policy.py  utils.py
easybo/_tests/: test_gp.py
easybo/experimental/: bo.py
easygp/: __init__.py  _core_gp.py  _version.py  campaign.py  gp.py  policy.py
easygp/_tests/: conftest.py
easygp/misc/: test_functions.py
legacy/: 00_intro.ipynb  01_Exact_GP_Regression_on_Classification_Labels.ipynb
legacy/notebooks/: .gitignore  00_intro.ipynb  01_intro_2d.ipynb  02_2d_active_learning.ipynb
notebooks/: 00_intro.ipynb  01_intro_2d.ipynb  02_2d_active_learning.ipynb  03_2d_active_learning_pure_botorch.ipynb
scripts/: install_requirements.sh
