[build-system]
requires = ["hatchling", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "EasyBayes"
authors = [
    {"name" = "Matthew R. Carbone", "email" = "mcarbone@bnl.gov"}
]
maintainers = [
    {"name" = "Matthew R. Carbone", "email" = "mcarbone@bnl.gov"}
]
description = "Probabilistic modeling, Gaussian process and Bayesian optimization sandbox"
readme = "README.md"
requires-python = ">=3.11"
license = {"file" = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy==1.26.0",
    "numpyro==0.13.2",
    "corner==2.2.2",
    "arviz==0.16.1",
    "torch==2.0.0",
    "gpytorch==1.11",
    "botorch==0.9.2",
]

# Dynamic version reads __version__ directly from my_package.__init__
dynamic = ["version"]

[tool.hatch.build.targets.wheel]
packages = ["easybayes"]


[project.optional-dependencies]
extra = [
    "matplotlib==3.8.0",
    "gpax==0.1.0",
    "jupyterlab==4.0.6",
]
dev = [
    "codecov",
    "coverage",
    "flake8",
    "pytest>=6",
    "pytest-cov>=3",
    "black",
    "nbstripout",
    "pre-commit",
    "nox==2023.4.22",
]
docs = [
    "sphinx",
    "numpydoc",
    "sphinx-copybutton",
    "sphinx_rtd_theme",
    "ipython",
]

[tool.hatch]
version.source = "vcs"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs/source/conf.py
)/
'''
